--- a/src/djangoplicity/newsletters/templates/newsletters/base.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/base.html
@@ -226,6 +226,10 @@
 			text-align: left;
 			padding:0px;
 		}
+		.paddingfooter {
+			padding-left: 10px;
+			padding-right: 10px;
+		}
 		.footerContent div a:link,.footerContent div a:visited,.footerContent div a .yshortcuts {
 			color:#336699;
 			font-weight:normal;
@@ -298,11 +302,12 @@
                                             <td style="text-align:right;padding:20px;font-family: Helvetica,Arial; font-size: 26px;" width="542">{% block header_title %}ESO Outreach Community Newsletter{% endblock %}<div style="font-size:13px">{% block header_subtitle %}July 2011{% endblock %}</div></td> 
                                         </tr> 
                                         <tr> 
-                                            <td colspan="2" class="headerContent" height="300px"; background="http://www.eso.org/public/archives/images/newsfeature/{{mainimage.id}}.jpg" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;text-align: left;vertical-align: bottom;"> 
+											<td colspan="2" class="headerContent" height="300px";  background="http://www.eso.org/public/archives/images/newsfeature/{{mainimage.id}}.jpg" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;text-align: left;vertical-align: bottom;background-color:black;"> 
+	                                            <!-- Outlook 2007 only -->
+												<!--[if gte mso 9]>
+												<img src="http://www.eso.org/public/archives/images/newsfeature/{{mainimage.id}}.jpg" width="733" height="300" />
+												<![endif]-->
                                             	<div style="padding:20px;color:white;font-size:22px;"><div style="font-size:14px;"><span style="background:black;padding:2px;"><a style="color:white; font-size:14px; text-decoration: none; font-weight: bold;" href="http://www.eso.org/public/images/potw/">ESO Picture of the Week</a></span></div><span style="background:black;padding:2px;"><a style="color:white;font-size:22px; text-decoration: none; font-weight: bold;" href="http://www.eso.org{{mainimage.get_absolute_url}}">{{mainimage.title}}</a></span></div> 
-                                            	
-                                            	
-                                            	
                                             </td> 
                                         </tr> 
                                     </table> 
@@ -382,26 +387,28 @@
                                                                         
                                                 <!-- // Begin Module: Standard Footer \\ --> 
                                                 <table border="0" cellpadding="0" cellspacing="0" width="100%"> 
-                                                    
+                                                    <tr><td colspan="3" style="background-color:#292929" height="5"></td></tr>
                                                     <tr> 
-                                                        <td valign="top" width="733"> 
+                                                        <td width="20" style="background-color:#292929">&nbsp;</td>
+                                                        <td valign="top" width="693"> 
                                                             <div style="color: #707070;font-family: Helvetica, Arial;font-size: 10px;line-height: 125%;text-align: center;background-color:#292929; padding-top:5px;padding-bottom:0px;padding-left:0px;padding-right:0px;"> 
                                                                 {% for obj in potws %}
                                                                 <a href="http://www.eso.org{{obj.image.get_absolute_url}}"><img style="border:0px;margin:2px;" src="http://www.eso.org/public/archives/images/wallpaperthumbs/{{obj.image.id}}.jpg" alt="{{obj.image.title}}"></img></a>&nbsp;
                                                                 {% endfor %}
-                                                                <div style="font-size:16px;color:white; padding-top: 5px; padding-left: 35px;padding-right: 35px;"><a href="http://feeds.feedburner.com/eso_potw"><img border="0" src="http://www.eso.org/public/archives/djangoplicity/images/rssicon.png"></a>&nbsp;<a style="font-size:16px;color:white;text-decoration:none;" href="http://www.eso.org/public/images/potw/">ESO Pictures of the Week</a>
+                                                                <div style="font-size:16px;color:white; padding-top: 5px;"><a href="http://feeds.feedburner.com/eso_potw"><img border="0" src="http://www.eso.org/public/archives/djangoplicity/images/rssicon.png"></a>&nbsp;<a style="font-size:16px;color:white;text-decoration:none;" href="http://www.eso.org/public/images/potw/">ESO Pictures of the Week</a>
                                                                 <hr size="1" style="color: #bbbbbb; background-color: #bbbbbb; border: 0; height: 1px;" /> 
                                                                 </div> 
-                                                                <div style="text-align:left;padding-top:5px;color:white;padding-left: 35px;padding-right: 35px;padding-bottom:20px;"> 
+                                                                <div style="text-align:left;padding-top:5px;color:white;"> 
                                                                 <p style="font-size: 11px;">You are receiving this newsletter because you subscribed to the ESO Outreach Community Newsletter.</p> 
 																<p style="font-size: 11px; text-align:center;"><a href="*|UNSUB|*" style="color:white">Unsubscribe</a> | <a href="*|UPDATE_PROFILE|*" style="color:white">Subscription preferences</a> | <a href="*|ARCHIVE|*" style="color:white">View in browser</a></p> 
 																<p style="font-size: 11px; text-align:center; margin-bottom: 0px;">European Southern Observatory, Karl-Schwarzschild-Str 2, D-85748 Garching bei M&uuml;nchen, Germany</p> 
                                                                 </div> 
                                                                 
                                                             </div> 
-                                                        </td> 
+                                                        </td>
+                                                        <td width="20" style="background-color:#292929">&nbsp;</td> 
                                                     </tr> 
-                                                    
+                                                    <tr><td colspan="3" style="background-color:#292929" height="10">&nbsp;</td></tr>
                                                 </table> 
                                                 <!-- // End Module: Standard Footer \\ --> 
                                             
