ESO FB twitter links, mantis #13642

--- a/src/djangoplicity/newsletters/templates/newsletters/base.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/base.html
@@ -356,11 +356,10 @@
                                                     	<td valign="top" class="sidebarContent" style="background-image: url(http://www.eso.org/public/archives/newsletter/tile.png); background-repeat: repeat-x; color: #505050; font-family: Helvetica, Arial; font-size: 12px; line-height: 130%; text-align: left;"> 
                                                         
                                                             <!-- // Begin Module: Top Image with Content \\ --> 
-                                                            <h3 class="h3" style="color: #285A97;display: block;font-family: Helvetica, Arial;font-size: 12px;font-weight: bold;line-height: 100%;margin-top: 10px;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: left;">Share this newsletter on:</h3> 
+                                                            <a target="_blank" href="http://www.facebook.com/ESOAstronomy"><img src="http://cdn-images.mailchimp.com/icons/share/facebook.png"/>ESO on Facebook</a>
+                                                            <br/>
+                                                            <a target="_blank" href="http://twitter.com/ESO_Observatory"><img src="http://cdn-images.mailchimp.com/icons/share/twitter.png"/>ESO on Twitter</a>
                                                             
-                                                            *|FACEBOOK:LIKE|* &nbsp; *|TWITTER:TWEET|* &nbsp; *|GOOGLE:BUZZ|*
-															<hr style="height:1px;border:0;border-bottom:1px solid #DEDEDE;"/> 
-                                                            *|MC:SHARE|*
 
                                                             
                                                             {% block sidebar %}
