- Added social icons in the bottom.

--- a/src/djangoplicity/newsletters/templates/newsletters/base.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/base.html
@@ -400,10 +400,17 @@
                                                                 </div> 
                                                                 <div style="text-align:left;padding-top:5px;color:white;"> 
                                                                 <p style="font-size: 11px;">You are receiving this newsletter because you subscribed to the ESO Outreach Community Newsletter.</p> 
-																<p style="font-size: 11px; text-align:center;"><a href="*|UNSUB|*" style="color:white">Unsubscribe</a> | <a href="*|UPDATE_PROFILE|*" style="color:white">Subscription preferences</a> | <a href="*|ARCHIVE|*" style="color:white">View in browser</a></p> 
-																<p style="font-size: 11px; text-align:center; margin-bottom: 0px;">European Southern Observatory, Karl-Schwarzschild-Str 2, D-85748 Garching bei M&uuml;nchen, Germany</p> 
-                                                                </div> 
-                                                                
+																<p style="font-size: 11px; text-align:center;"><a href="*|UNSUB|*" style="color:white">Unsubscribe</a> | <a href="*|UPDATE_PROFILE|*" style="color:white">Subscription preferences</a> | <a href="*|ARCHIVE|*" style="color:white">View in browser</a></p>
+																<p style="font-size: 11px; text-align:center;"><img src="http://www.eso.org/public/archives/images/socialicons.png" style="border:0px;" usemap="#sociallinks"></img></p>
+																<p style="font-size: 11px; text-align:center; margin-bottom: 0px;">European Southern Observatory, Karl-Schwarzschild-Str 2, D-85748 Garching bei M&uuml;nchen, Germany</p>
+																<map id="sociallinks" name="sociallinks">
+																	<area shape="rect" alt="Facebook" coords="0,0,28,28" href="http://www.facebook.com/pages/ESO-Astronomy/10867667494" />
+																	<area shape="rect" alt="Twitter" coords="36,0,64,28" href="http://twitter.com/ESO_Observatory" />
+																	<area shape="rect" alt="Flickr" coords="73,0,101,28" href="http://www.flickr.com/photos/esoastronomy/" />
+																	<area shape="rect" alt="YouTube" coords="110,0,138,28" href="http://www.youtube.com/ESOObservatory/" />
+																	<area shape="rect" alt="Vimeo" coords="147,0,175,28" href="http://www.vimeo.com/esoastronomy" />
+																</map>
+                                                                </div>
                                                             </div> 
                                                         </td>
                                                         <td width="20" style="background-color:#292929">&nbsp;</td> 
