--- a/src/djangoplicity/newsletters/templates/newsletters/base2.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/base2.html
@@ -380,6 +380,65 @@
                                     <!-- // End Template Body \\ -->
                                 </td>
                             </tr>
+                            <tr> 
+                            	<td align="center" valign="top"> 
+                                    <!-- // Begin Template Body \\ -->
+                                    <hr style="height:1px;border:0;border-bottom:1px solid #DEDEDE;" />
+                                     
+                                	<table border="0" cellpadding="0" cellspacing="0" width="733" id="templateBody"> 
+                                    	<tr> 
+                                        	<td valign="top" width="541"> 
+                                            	<table border="0" cellpadding="0" cellspacing="0" width="541"> 
+                                                	<tr> 
+                                                    	<td valign="top"> 
+                                            				<table border="0" cellpadding="0" cellspacing="0" width="541"> 
+                                                            	<tr> 
+                                                                	<td valign="top" class="bodyContent" style="background-color: #FFFFFF;"> 
+                                                            
+                                                                        <!-- // Begin Module: Standard Content \\ --> 
+                                                                        <table border="0" cellpadding="20" cellspacing="0" width="100%"> 
+                                                                            <tr> 
+                                                                                <td valign="top" style="background-image: background-repeat: repeat-x;"> 
+ 						                                                            <div style="color: #505050;font-family: Helvetica, Arial;font-size: 12px;line-height: 130%;text-align: left;"> 
+ 						                                                            {% block content2 %}
+						                                                               {% endblock %}
+						                                                            </div>
+                                                                                </td>
+                                                                            </tr>
+                                                                        </table>
+                                                                                       
+                                                                        <!-- // End Module: Standard Content \\ -->
+                                                            
+                                                                    </td>
+                                                                </tr>
+                                                            </table>
+                                                		</td>
+                                                    </tr>
+                                                 
+                                                </table>                                                
+                                            </td>
+                                            <!-- // Begin Sidebar \\ --> 
+                                        	<td valign="top" width="192" id="templateSidebar" style="background-color: #FFFFFF;"> 
+                                            	<table border="0" cellpadding="10" cellspacing="0" width="192" > 
+                                                	<tr > 
+                                                    	<td valign="top" class="sidebarContent" style=background-repeat: repeat-x; color: #505050; font-family: Helvetica, Arial; font-size: 12px; line-height: 130%; text-align: left;"> 
+                                                        
+                                                            <!-- // Begin Module: Top Image with Content \\ --> 
+                                                                                                                     
+                                                            {% block sidebar2 %}
+                                                            {% endblock %}
+                                                            <!-- // End Module: Top Image with Content \\ -->
+                                                        
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                            <!-- // End Sidebar \\ -->
+                                        </tr>
+                                    </table>
+                                    <!-- // End Template Body \\ -->
+                                </td>
+                            </tr>
                         	<tr>
                         	
                             	<td align="center" valign="top">
@@ -395,7 +454,7 @@
                                                         <td width="20" style="background-color:#292929">&nbsp;</td>
                                                         <td valign="top" width="693"> 
                                                             <div style="color: #707070;font-family: Helvetica, Arial;font-size: 10px;line-height: 125%;text-align: center;background-color:#292929; padding-top:5px;padding-bottom:0px;padding-left:0px;padding-right:0px;"> 
-                                                                {% for obj in data.footer_potws %}
+                                                                {% for obj in data.potws.footer %}
                                                                 <a href="http://www.eso.org{{obj.image.get_absolute_url}}"><img style="border:0px;margin:2px;" src="http://www.eso.org/public/archives/images/wallpaperthumbs/{{obj.image.id}}.jpg" alt="{{obj.image.title}}"></img></a>&nbsp;
                                                                 {% endfor %}
                                                                 <div style="font-size:16px;color:white; padding-top: 5px;"><a href="http://feeds.feedburner.com/eso_potw"><img border="0" src="http://www.eso.org/public/archives/djangoplicity/images/rssicon.png"></a>&nbsp;<a style="font-size:16px;color:white;text-decoration:none;" href="http://www.eso.org/public/images/potw/">ESO Pictures of the Week</a>
