--- a/src/djangoplicity/newsletters/templates/newsletters/news-text.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/news-text.html
@@ -11,87 +11,62 @@ http://www.eso.org{{data.release.get_absolute_url}}
 
 {%if data.release.get_translations %}Translations are available in:{% for translation in data.release.get_translations %}
  * {{translation.name}}: http://www.eso.org{{translation.release_url}}{%endfor%}{% endif %}
-
-*************************************************************************
-We would also like to direct your attention to the following:
-
-
+{% if data.release.kids_title and data.release.kids_description %} 
+Space Scoop - the children's version of this release is available at: 
+http://www.eso.org{% url releases_detail_kids data.release.id %}{% endif%}  
+ 
 Kind regards,
 The ESO Education and Public Outreach Department
 {{ data.release.release_date|date }}
 
+*************************************************************************
 
+We would also like to direct your attention to the following:
 
 =================
-ESO ANNOUNCEMENTS
+ESO Announcements
 =================
-{% for obj in announcements %}
+{% for obj in data.announcements %}
 *{{ obj.title|safe }}{% if obj.subtitle%} - {{ obj.subtitle|safe }}{% endif %}*
 
 {{ obj.release_date|date }}: {{ obj.description|striptags|truncatewords:50|unescape|safe }} [read more on http://www.eso.org{{ obj.get_absolute_url }}]
 {% endfor %}
 See latest ESO annoucements on http://www.eso.org/public/announcements/
 
-=======
-ESOCAST
-=======
-{% for obj in esocasts %}
-*{{ obj.title|safe }}*
-
-{{ obj.release_date|date }}: {{ obj.headline|striptags|truncatewords:50|unescape|safe }} [view it on http://www.eso.org{{ obj.get_absolute_url }}]
-{% endfor %}
-View more ESOcasts on http://www.eso.org/public/videos/archive/category/esocast/
-
-==================
-ESO PRESS RELEASES
-==================
-{% for obj in releases %}
-*{{ obj.title|safe }}{% if obj.subtitle%} - {{ obj.subtitle|safe }}{% endif %}*
-{{ obj.release_date|date }}, read more on http://www.eso.org{{ obj.get_absolute_url }}
-{% endfor %}
-More news available on http://www.eso.org/public/news/, including translations into 18 different languages.
-
 ==============
-NEW ON ESO.ORG
+New on eso.org
 ==============
-{% for obj in newoneso %}
+{% for obj in data.newoneso %}
 *{{ obj.title|safe }}*
 {{ obj.link }}
 {% endfor %}
+
 ==============
-ONGOING EVENTS
+Ongoing events
 ==============
-{% for obj in ongoing_events %}
+{% for obj in data.events.all %}{% if obj.type.name == "Special Events" and obj.ongoing %}
 *{{ obj.title|safe }}*
 {{ obj.link }}
-{% endfor %}
+{%endif%}{% endfor %}
+
 ===============
-UPCOMING EVENTS
+Upcoming events
 ===============
-{% for obj in events %}
-* {{ obj.dates|unescape|safe }}: {{ obj.title|striptags|unescape|safe }}
-{% endfor %}
+{% for obj in data.events.all %}{% if obj.type.name == "Special Events" and not obj.ongoing %}
+* {{ obj.get_dates|unescape|safe }}: {{ obj.title|striptags|unescape|safe }}
+{% endif %}{% endfor %}
 See more on http://www.eso.org/public/events/special-evt.html
 
 ====================
-UPCOMING EXHIBITIONS
+Upcoming exhibitions
 ====================
-{% for obj in exhibitions %}
-* {{ obj.dates|unescape|safe }}: {{ obj.title|striptags|unescape|safe }}
-{% endfor %}
+{% for obj in data.events.all %}{% if obj.type.name == "Exhibitions" %}
+* {{ obj.get_dates|unescape|safe }}: {{ obj.title|striptags|unescape|safe }}{% if obj.get_location %}. {{ obj.get_location }}.{%endif%}
+{% endif %}{% endfor %}
 See more on http://www.eso.org/public/events/exhibitions.html
 
-========================
-ESO PICTURES OF THE WEEK 
-========================
-{% for obj in potws %}
-* {{ obj.release_date|date }}: {{ obj.image.title|safe }}
-http://www.eso.org{{ obj.get_absolute_url }}
-{% endfor %}
-See more on http://www.eso.org/public/images/potw/
-
 ---
-You are receiving this newsletter because you subscribed to the ESO Outreach Community Newsletter.
+You are receiving this newsletter because you subscribed to ESO News.
 
 Unsubscribe at *|UNSUB|*
 Change subscription preferences at *|UPDATE_PROFILE|*
